--- a/pages/fun3/fun3.wxml
+++ b/pages/fun3/fun3.wxml
@@ -4,15 +4,16 @@
 
 <view class="row1">
 <text> 命题公式: </text>
-<input class="input" type="text" placeholder="请输入" bindinput="bindInput" value="{{inputValue}}"/> 
+<input class="input" focus="{{focus}}" type="text" placeholder="请输入" bindinput="bindInput" value="{{inputValue}}"/> 
 </view>
+<math-Button catch:clickBt = "handleClickMathBt" ></math-Button>
 <view class="bt" bind:tap="handleTap">输出极大值和极小值</view>
 <view class="row1">
-<text> 最大项: </text>
-<text>{{}} </text>
+<text > 主合取范式: </text>
 </view>
+<text class="longText">{{maxItem}} </text>
 <view class="row1">
-<text> 最小项: </text>
-<text> {{}} </text>
+<text > 主汲取范式: </text>
 </view>
+<text class="longText"> {{minItem}} </text>
 </view>
