--- a/Components/mathButton/mathButton.wxss
+++ b/Components/mathButton/mathButton.wxss
@@ -13,7 +13,6 @@
   line-height: 2rem;
   background: rgba(143, 205, 234,0.6);
 }
-.item:hover{
+/* .item:hover{
   background: rgba(143, 205, 234,1);
-
-}
+} */
