--- a/pages/truthtable/truthtable.wxss
+++ b/pages/truthtable/truthtable.wxss
@@ -1,1 +1,51 @@
-.container .truth_table__inner{text-align:center}.container .truth_table__inner .plus_input{display:inline-block;margin-top:50rpx}.container .truth_table__inner .equal_button{width:80%;background-color:#ddd6fe}.container .truth_table__inner .table_show{width:90%;min-height:100rpx;background-color:#ddd6fe;margin:10rpx auto;border-radius:20rpx}.container .truth_table__inner .table_show .uni-table{width:95%;background-color:#c8bdfd;margin:10rpx auto 20rpx}.container .truth_table__inner .table_show .uni-table .uni-table-mask{background-color:#ddd6fe}
+/**
+ * 这里是uni-app内置的常用样式变量
+ *
+ * uni-app 官方扩展插件及插件市场（https://ext.dcloud.net.cn）上很多三方插件均使用了这些样式变量
+ * 如果你是插件开发者，建议你使用scss预处理，并在插件代码中直接使用这些变量（无需 import 这个文件），方便用户通过搭积木的方式开发整体风格一致的App
+ *
+ */
+/**
+ * 如果你是App开发者（插件使用者），你可以通过修改这些变量来定制自己的插件主题，实现自定义主题功能
+ *
+ * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
+ */
+/* 颜色变量 */
+/* 行为相关颜色 */
+/* 文字基本颜色 */
+/* 背景颜色 */
+/* 边框颜色 */
+/* 尺寸变量 */
+/* 文字尺寸 */
+/* 图片尺寸 */
+/* Border Radius */
+/* 水平间距 */
+/* 垂直间距 */
+/* 透明度 */
+/* 文章场景相关 */
+.container .truth_table__inner {
+  text-align: center;
+}
+.container .truth_table__inner .plus_input {
+  display: inline-block;
+  margin-top: 50rpx;
+}
+.container .truth_table__inner .equal_button {
+  width: 80%;
+  background-color: #ddd6fe;
+}
+.container .truth_table__inner .table_show {
+  width: 90%;
+  min-height: 100rpx;
+  background-color: #ddd6fe;
+  margin: 10rpx auto;
+  border-radius: 20rpx;
+}
+.container .truth_table__inner .table_show .uni-table {
+  width: 95%;
+  background-color: #c8bdfd;
+  margin: 5rpx auto 10rpx;
+}
+.container .truth_table__inner .table_show .uni-table .uni-table-mask {
+  background-color: #ddd6fe;
+}
