feat: 自定义键盘初步完成

--- a/Components/customKeyboard/customKeyBoard.wxml
+++ b/Components/customKeyboard/customKeyBoard.wxml
@@ -1,4 +1,7 @@
-<view>自定义键盘</view>
-<view class="kb_container">
+<view style="translate:{{kb_translate}}" class="kb_container">
+  <view class="{{item.select ? 'active':''}} {{item.cat}}" data-value="{{item.value}}" data-index="{{index}}" wx:for="{{arr}}" wx:key="{{index}}" bind:touchstart="handleTouchStart" bind:touchend="handleTouchEnd">
+    {{item.value == -1 ? "" : item.value }}
+  </view>
+
 
 </view>
