--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -1,7 +1,3 @@
 <!--pages/test/test.wxml-->
-<customKb bind:kb_touchEnd="ontemp" show="{{show}}"></customKb>
-<view>自定义键盘</view>
-<view ></view>
-<view>
-  <input bindfocus="onFocus" style="background: skyblue;"/>
-</view>
+<!-- <customKb bind:kb_touchEnd="ontemp" show="{{show}}"></customKb> -->
+<viewInput bind:input="onInput"></viewInput>
