--- a/Components/customKeyboard/customKeyBoard.wxss
+++ b/Components/customKeyboard/customKeyBoard.wxss
@@ -8,7 +8,8 @@ page {
 .kb_container {
   position: fixed;
   padding: var(--kb-padding-y) var(--kb-padding-x);
-  background: rgba(36, 36, 36, 0.7);
+  background: rgba(91, 31, 91);
+  z-index: 999;
   bottom: 0;
   height: 430rpx;
   width: calc(100% - 2 * var(--kb-padding-x));
