--- a/Components/viewInput/viewInput.wxml
+++ b/Components/viewInput/viewInput.wxml
@@ -1,12 +1,13 @@
-<view style="width: {{width}}; height: {{height}}; font-size: {{fontSize}};" class="viewInput" catch:tap="catchTap">
-<text class="emptyCursor" style="display: {{ curIndex == -1 && isFocus ? 'flex' :'none' }};">|</text>
+<view class="viewInput ~{{Class}}" style="width: {{width}}; height: {{height}}; font-size: {{fontSize}};" catch:tap="catchTap">
+
+  <text class="emptyCursor" style="font-size: {{cursorFont}}; display: {{ ( curIndex ==-1) && isFocus ? 'flex' :'none' }};">|</text>
   <view class="item" bind:tap="onTap" id="item{{index}}" data-index="{{index}}" wx:for="{{inputValue}}">
     <view class="text">
       {{item}}
-      <text style="display: {{ index == curIndex ? 'flex' :'none' }};" class="cursor">|</text>
+      <text style="font-size: {{cursorFont}}; display: {{ (index == curIndex) && isFocus ? 'flex' :'none' }};" class="cursor">|</text>
     </view>
   </view>
   <text style=" display: {{inputValue ? 'none': 'flex' }}" class="PlaceHolder">{{placeholder}}</text>
 </view>
 <!-- <canvas class="canvas" type="2d" id="canvas"></canvas> -->
-<customKb bind:kb_input="onInput" show="{{isFocus}}"></customKb>
+<customKb bind:kb_input="onInput" show="{{isFocus }}"></customKb>
