--- a/Components/viewInput/viewInput.wxss
+++ b/Components/viewInput/viewInput.wxss
@@ -11,22 +11,27 @@ text{
   margin: 0;
   padding: 0;
   width: min-content;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
+
 .viewInput{
   display: flex;
   align-items: center;
   position:relative;
-  background: skyblue;
 }
 .PlaceHolder{
   position:relative;
   opacity: 0.4;
 }
 .item{
+  height: 100%;
   display: flex;
   font-size: inherit;
 }
 .emptyCursor{
+  opacity: 0.7;
   top: 0;
   position: absolute;
   height: 100%;
@@ -36,8 +41,9 @@ text{
   animation: blink 1s infinite  steps(1,start);
 }
 .cursor{
+  opacity: 0.7;
   left: 85%;
-  top: 0;
+  top: -2%;
   position: absolute;
   height: 100%;
   align-items: center;
