--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -1,3 +1,3 @@
 <!--pages/test/test.wxml-->
 <!-- <customKb bind:kb_touchEnd="ontemp" show="{{show}}"></customKb> -->
-<viewInput bind:input="onInput"></viewInput>
+<viewInput Class11="temp" bind:input="onInput"></viewInput>
