--- a/pages/fun3/fun3.wxml
+++ b/pages/fun3/fun3.wxml
@@ -1,10 +1,10 @@
 <!--pages/fun3/fun3.wxml-->
-<view class="container">
-<math-Button bind:clickBt = "handleClickMathBt" ></math-Button>
+<view class="container" bind:tap="closeKb">
 <view class="row1">
 <text> 命题公式: </text>
-<viewInput></viewInput>
-<input id="input" class="input" focus="{{focus}}" type="text" placeholder="请输入" bindinput="bindInput" value="{{inputValue}}"/> 
+<viewInput  vi-class="input" width="400rpx" placeholder="请输入" value="{{inputValue}}" bind:input="bindInput" 
+customKeys="{{customKeys}}" show="{{show}}" ></viewInput>
+<!-- <input id="input" class="input" focus="{{focus}}" type="text" placeholder="请输入" bindinput="bindInput" value="{{inputValue}}"/>  -->
 </view>
 <view class="bt" bind:tap="handleTap">输出极大值和极小值</view>
 <view class="row1">
