--- a/pages/fun4/fun4.wxml
+++ b/pages/fun4/fun4.wxml
@@ -3,7 +3,7 @@
 <view class="title">需求4</view>
 <view class="row1">
 <view>前提:</view>
-<viewInput placeholder=""  bindinput="preInput" vi-class="input" width="340rpx" value="{{curPre}}" show="{{show1}}"></viewInput>
+<viewInput placeholder=""  bindinput="preInput" vi-class="input" width="340rpx" customKeys="{{customKeys}}" value="{{curPre}}" show="{{show1}}"></viewInput>
 <view class="bt" bind:tap="resetPre">重置</view>
 <view class="bt" bind:tap="addPre">确认</view>
 </view>
@@ -14,7 +14,7 @@
 </view>
 <view class="row1">
   <view>结论:</view>
-<viewInput placeholder="" bindinput="conInput" vi-class="input" width="340rpx" value="{{curCon}}" show="{{show2}}" ></viewInput>
+<viewInput placeholder="" bindinput="conInput" vi-class="input" width="340rpx" customKeys="{{customKeys}}" value="{{curCon}}" show="{{show2}}" ></viewInput>
 
   <view class="bt" bind:tap="resetCon">重置</view>
   <view class="bt" bind:tap="addCon">确认</view>
