--- a/app.wxss
+++ b/app.wxss
@@ -19,7 +19,7 @@ page::after {
   animation: shadow-preload 0.1s;
   animation-delay: 3s;
 }
-@-webkit-keyframes shadow-preload {
+/* @-webkit-keyframes shadow-preload {
   0% {
     background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
   }
@@ -34,7 +34,7 @@ page::after {
   100% {
     background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
   }
-}
+} */
 page {
   --status-bar-height: 25px;
   --top-window-height: 0px;
