feat:写了一些页面架子

--- a/pages/message/chat/components/comment-card/index.wxml
+++ b/pages/message/chat/components/comment-card/index.wxml
@@ -1,2 +1,3 @@
-<!--pages/message/chat/components/comment-card/index.wxml-->
-<text>pages/message/chat/components/comment-card/index.wxml</text>
+<view>
+待封装组件
+</view>
