--- a/pages/message/chat/pages/comment/index.wxss
+++ b/pages/message/chat/pages/comment/index.wxss
@@ -65,6 +65,7 @@ page{
   top:-30rpx;
   display:flex;
   background: #f8f8f8;
+  align-items: center;
   opacity: 1;
   z-index: 999;
   width: 100%;
