--- a/pages/firstPage/首页.wxss
+++ b/pages/firstPage/首页.wxss
@@ -1,1 +1,47 @@
 /* pages/firstPage/首页.wxss */
+.container{
+  height: 100vh;
+  overflow: scroll;
+}
+.funList{
+  display: flex;
+  gap: 40rpx;
+  padding: 30rpx;
+  justify-content:space-around;
+}
+.bt_class{
+  width:200rpx;
+  height: 200rpx;
+}
+.icon_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10rpx;
+}
+.icon_bg{
+  background:#ffffff ;
+  opacity: 0.8;
+}
+.tap_bg{
+  background:#2e2e2e
+}
+.tabs{
+  height: 100% ;
+  background:#636b7a31;
+  display: flex;
+  flex-direction: column;
+}
+.tab-class{
+  font-size: 30rpx !important;
+}
+.tab-active-class{
+font-size: 40rpx !important;
+font-weight: bolder !important;
+}
+.tabContent{
+  display: flex;
+  justify-content: center;
+  gap: 20rpx;
+  padding:40rpx 0;
+}
