--- a/pages/firstPage/components/card/index.wxml
+++ b/pages/firstPage/components/card/index.wxml
@@ -1,12 +1,21 @@
 <!--pages/firstPage/components/card/index.wxml-->
 <view class="container">
+  <van-popup
+  show="{{ show }}"
+  closeable
+  close-icon="close"
+  position="bottom"
+  custom-style="height: 30% ;background:#4c4c4c"
+  bind:close="onClose"
+  round
+/>
   <view class="top">
     <view class="course">
       <view class="col">
         <view style="font-size: 35rpx;"> {{info.courseValue.course}}</view>
         <view style="opacity: 0.5;font-size: 30rpx;color:#121311"> {{info.courseValue.num}}人</view>
       </view>
-      <view class="more">
+      <view class="more" bind:tap="intoPopup">
         <van-icon name="ellipsis" color="#2e2e2e" />
       </view>
     </view>
@@ -14,8 +23,7 @@
   <view class="bottom">
     <!-- 一个课程对应不止一个班级 -->
     <van-cell-group>
-      <van-cell custom-class="cell-class" title-class="title-class" label-class="label-class" clickable center  border wx:for="{{info.classValue}}" title="{{item.name}}" label="{{item.num}}人" is-link value="" />
+      <van-cell custom-class="cell-class" title-class="title-class" label-class="label-class" clickable center border wx:for="{{info.classValue}}" title="{{item.name}}" label="{{item.num}}人" is-link value="" />
     </van-cell-group>
-
   </view>
 </view>
