--- a/pages/exercises/index.wxml
+++ b/pages/exercises/index.wxml
@@ -18,5 +18,13 @@
       </view>
     </view>
   </van-cell>
-  
+  <van-cell size="large" center is-link link-type="navigateTo" url="/pages/exercises/createExe/index">
+    <view slot="title">
+      <view style="margin-left: 10rpx;" class="row">
+        <view class="col" style="font-size: 30rpx;">
+          <view class="name">创建题目</view>
+        </view>
+      </view>
+    </view>
+  </van-cell>
 </view>
