--- a/pages/exercises/createExe/index.wxss
+++ b/pages/exercises/createExe/index.wxss
@@ -1,1 +1,38 @@
 /* pages/exercises/createExe/index.wxss */
+.container{
+  position: relative;
+  box-sizing: border-box;
+  width: 750rpx;
+  height: 100vh;
+  padding: 20rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.bottom{
+  position: relative;
+  margin-top: 100rpx;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.content-item{
+  display: flex;
+  justify-content: center;
+}
+.choice > button{
+  padding: 5rpx 60rpx;
+  min-width: fit-content;
+  min-height: fit-content;
+  background: #8bcf70;
+  font-weight: bolder;
+}
+.active{
+  box-shadow: red 2rpx 2rpx 10rpx;
+  border: 6rpx dashed red;
+}
+.description{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
