--- a/pages/firstPage/首页.wxss
+++ b/pages/firstPage/首页.wxss
@@ -32,11 +32,15 @@
   display: flex;
   flex-direction: column;
 }
+.nav-class{
+  display: flex;
+  margin-right: 200rpx;
+}
 .tab-class{
-  font-size: 30rpx !important;
+  font-size: 25rpx !important;
 }
 .tab-active-class{
-font-size: 40rpx !important;
+font-size: 30rpx !important;
 font-weight: bolder !important;
 }
 .tabContent{
@@ -44,4 +48,22 @@ font-weight: bolder !important;
   justify-content: center;
   gap: 20rpx;
   padding:40rpx 0;
+}
+.content{
+  position: relative;
+  min-height: fit-content;
+  height: 100%;
+}
+.add{
+  position:absolute;
+  right: 25rpx;
+  top: 18rpx;
+  z-index: 1000;
+  background: rgba(176, 210, 241,0.6);
+  width: 90rpx;
+  height: 50rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
 }
