--- a/pages/class/index.wxss
+++ b/pages/class/index.wxss
@@ -1,1 +1,76 @@
 /* pages/class/index.wxss */
+.Container{
+  display: flex;
+  flex-direction: column;
+  gap: 10rpx;
+  height: 100vh;
+}
+.Container >view{
+  box-sizing: border-box;
+  padding: 30rpx ;
+}
+.top{
+  width: 100%;
+  height: 120rpx;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 45rpx;
+  font-weight: bolder;
+  border-bottom: 10rpx solid rgba(233, 234, 236,0.7);
+}
+.middle{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 10rpx solid rgba(233, 234, 236,0.7);
+}
+.icon_container{
+  flex: 1;
+  gap:20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.title{
+  font-weight: bolder;
+  height: 60rpx;
+  font-size: 30rpx;
+  border-bottom: 10rpx solid rgba(233, 234, 236,0.7);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.plus{
+  height: fit-content;
+  box-sizing: border-box;
+  padding: 0 20rpx;
+  border-radius: 10%;
+  background: rgba(176, 210, 241,0.6)
+}
+.icon-hover-class{
+  background: rgba(176, 210, 241) ;
+}
+.bottom{
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.tab-active-class{
+  font-size: 35rpx !important;
+  font-weight: bolder !important;
+}
+
+
+.content{
+  margin-top: 40rpx;
+  display: flex;
+  flex-direction: column;
+  gap: 30rpx;
+}
+.wrap-class{
+  background: blue;
+  flex: 1;
+}
